get ready to publish to chrome store

--- a/popup.html
+++ b/popup.html
@@ -13,9 +13,11 @@
         <div id='list-container'></div>
 
         <div id='saved-sessions'>
-            <h2>Saved Sessions</h2>
+            <div id='saved-sessions-header'>
+                <h2>Saved Sessions</h2>
+                <button id='clear-storage'>Clear All Saved Sessions</button>
+            </div>
         </div>
 
-        <button id='clear-storage'>Clear All Saved Sessions</button>
     </body>
 </html>
